--- a/style.css
+++ b/style.css
@@ -5,18 +5,18 @@
 }
 
 .body {
-    background-color: rgba(22, 243, 151, 0.884);
+    background-color: rgba(190, 236, 217, 0.884);
     color: black;
 
 }
 
 .section {
-    background-color: rgba(22, 243, 151, 0.884);
+    background-color: rgba(190, 236, 217, 0.884);;
     color: black;
 }
 
 .main {
-    background-color: rgba(22, 243, 151, 0.884);
+    background-color: rgba(190, 236, 217, 0.884);;
     color: black;
 }
 
